infrastructure/base/stackgres/operator/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stackgres
  namespace: stackgres
  annotations:
    traefik.ingress.kubernetes.io/service.scheme: https
spec:
  ingressClassName: traefik
  rules:
    - host: stackgres.${domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stackgres-restapi
                port:
                  number: 443
  tls:
    - secretName: stackgres-tls
      hosts:
        - stackgres.${domain}
